# RoboRoboPi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  RoboRoboPi.sln  main.cpp  servo.cpp
AndroidRoboRobo/: AndroidRoboRobo.csproj  MainActivity.cs  packages.config
AndroidRoboRobo/Properties/: AndroidManifest.xml  AssemblyInfo.cs
AndroidRoboRobo/Resources/: Resource.Designer.cs
PublishScripts/Configurations/: RoboWebApp-WAWS-dev.json  WebRoboRobo-WAWS-dev.json
PublishScripts/Scripts/: Deploy-AzureResourceGroup.ps1
PublishScripts/Templates/: WebRoboRobo2.param.dev.json
RoboRoboPi/: AlsaPcmPlayer.cpp  AlsaPcmPlayer.h  AlsaSoundPlayer.cpp  AlsaSoundPlayer.h  CMakeCache.txt  CMakeLists.txt  ConnectionListener.cpp  ConnectionListener.h  Gpio.cpp  Gpio.h  GpioFactory.cpp  GpioFactory.h  GpioPi.cpp  GpioPi.h  GpioWin.cpp  GpioWin.h  IGpio.h  ISoundPlayer.h  ISpeechSynthesizer.h  Makefile  MessageHandler.cpp  MessageHandler.h  NullSoundPlayer.h  RoboRobo.cpp  RoboRobo.h  RoboRoboFactory.cpp  RoboRoboFactory.h  RoboRoboPi.vcxproj  RoboRoboPi.vcxproj.filters  Servo.cpp  Servo.h  SoundPlayerFactory.cpp  SoundPlayer_linux.cpp  SpeechSynthesizer.h  SpeechSynthesizerFactory.cpp  SpeechSynthesizerFactory.h  SpeechSynthesizerPs.h  SpeechSynthesizerTts.cpp  SpeechSynthesizerTts.h  SpeechSynthesizer_linux.cpp  (+14 more)
RoboRoboPi/Commands/: HelpCommand.cpp  HelpCommand.h  ICommand.h  LedCommand.cpp  LedCommand.h  PlaySoundCommand.cpp  PlaySoundCommand.h  ServoCommand.cpp  ServoCommand.h  TellCommand.cpp  TellCommand.h  UnknownCommand.cpp  UnknownCommand.h
RoboRoboPi/audio/: AlsaSoundPlayer.cpp  AlsaSoundPlayer.h  ISoundPlayer.h  NullSoundPlayer.h  SoundPlayer.h  SoundPlayerFactory.cpp  SoundPlayerFactory.h  SoundPlayer_linux.cpp  SoundPlayer_windows.cpp  SpeechSynthesizerFactory.cpp  SpeechSynthesizerPs.cpp  SpeechSynthesizerPs.h  SpeechSynthesizerTts.cpp  SpeechSynthesizerTts.h  WindowsSoundPlayer.cpp  WindowsSoundPlayer.h
RoboRoboPi/commands/: HelpCommand.cpp  HelpCommand.h  ICommand.h  LedCommand.cpp  LedCommand.h  PlaySoundCommand.cpp  PlaySoundCommand.h  ServoCommand.cpp  ServoCommand.h  TellCommand.cpp  TellCommand.h  UnknownCommand.cpp  UnknownCommand.h
RoboRoboPi/stubs/: SoundPlayer.cpp  SoundPlayer_windows.cpp  SpeechSynthesizer.h  SpeechSynthesizerPs.cpp  SpeechSynthesizer_windows.cpp  wiringPi.h
RoboWebApp/: Global.asax  Global.asax.cs  RoboWebApp.csproj  Startup.cs  Web.config
RoboWebApp/App_Start/: BundleConfig.cs  FilterConfig.cs  IdentityConfig.cs  RouteConfig.cs  Startup.Auth.cs  WebApiConfig.cs
RoboWebApp/Controllers/: AccountController.cs  HomeController.cs  ManageController.cs
RoboWebApp/Models/: AccountViewModels.cs  IdentityModels.cs  ManageViewModels.cs
RoboWebApp/Properties/: AssemblyInfo.cs
RoboWebApp/Views/: Web.config
RoboXmppHelper/: RoboXmppHelper.csproj  XmppHelper.cs  packages.config
RoboXmppHelper/Properties/: AssemblyInfo.cs
WebRoboRobo2/: Startup.cs  WebRoboRobo2.xproj  project.json
WebRoboRobo2/Controllers/: ServoController.cs
WebRoboRobo2/Properties/: launchSettings.json
picotts/: TTSENGINE.H
wrap/RoboXmppHelper/: project.json
(+18 files in other folders)
